# alienprobe

./: .gitignore  README.md  pyproject.toml
src/alienprobe/: __init__.py  alien_logger.py  log_levels.py  message.py
src/alienprobe/dispatchers/: __init__.py  base_dispatcher.py  console_dispatcher.py  null_dispatcher.py
src/alienprobe/formatters/: __init__.py  colored_console_formatter.py
testing/collateral/examples/: console_only_config.toml
testing/collateral/testing/: test_alienlogger_config.toml
testing/test_src/alienlogger_tests/: test_fixtures.py  test_logger.py
testing/test_src/alienprobe_tests/: __init__.py  test_logger.py
