[tool.poetry]
name = "alienprobe"
version = "0.7.1"
description = "A logging library which allows for rapid logging development, debugging and analysis by downstream log analysis systems."
authors = ["Andre Bonin <Yoyoma2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


